# infoamazonia_boto

./: .env.development  .env.production  .gitignore  .replit  API_DOCUMENTATION.md  CLAUDE.md  Dockerfile  README.md  admin.py  admin_management.py  admin_original_backup.py  api_endpoints.py  auth.py  azure.yaml  cache_utils.py  config.py  create_sample_data.py  create_sample_metrics.py  create_sample_news_sources.py  create_superadmin.py  database.py  dev.backup.db  dev.bak2.db  dev.db  docker-compose.yml  dump.rdb  dump_database.py  entrypoint.sh  insert_fake_interactions.py  main.py  manage.py  messages.yml  middleware.py  migrations.py  models.py  next-steps.md  prompts.yml  pyproject.toml  replit.md  replit.nix  (+7 more)
.github/: copilot-instructions.md
admin/: README.md  __init__.py  admin_users.py  articles.py  base.py  interactions.py  messages.py  metrics.py  news_sources.py  scheduler.py  users.py
attached_assets/: Pasted--Check-if-generation-of-summary-is-requested-summary-None-valid-None--1748962128629.txt  Pasted--File-home-runner-workspace-webhook-py-line-140-in-module-router-post--1739576651444.txt  Pasted--Rsponse-success-true-articles-id-2bfbe5aa-5098-4370-9765-6958416c5-1742167726066.txt  Pasted--Welcome-messages-welcome-new-user-Ol-Eu-sou-o-Boto-o-rob-da-InfoAmazonia-que-te-1739575333981.txt  Pasted--home-runner-workspace-pythonlibs-lib-python3-11-site-packages-pydantic-internal-config-py-345-U-1746553873155.txt  Pasted--search-bp-route-api-ctr-stats-def-get-ctr-stats-Get-Click-Through-Rate-statistic-1751828011585_1751828011586.txt  Pasted--services-chatbot-py-from-transitions-import-Machine-from-app-models-import-User-Location-Subject-1739575298568.txt  Pasted--services-chatgpt-py-import-requests-import-logging-from-flask-import-current-app-from-typing-impor-1739575303531.txt  Pasted--services-whatsapp-py-import-requests-import-logging-from-datetime-import-datetime-from-flask-impor-1739575307436.txt  Pasted--success-true-articles-id-2bfbe5aa-5098-4370-9765-6958416c5491--1742167708784.txt  Pasted--success-true-results-id-0064ac50-2ab6-408e-ae2c-c447a2b5fe89--1739927034389.txt  Pasted--tasks-tasks-py-import-os-import-requests-import-logging-from-flask-import-current-app-from-celery--1739575311199.txt  Pasted--workspace-ipython-Python-3-11-9-main-Apr-2-2024-08-25-04-GCC-13-2-0-Type-copyright-cre-1748439184911.txt  (+18 more)
docs/: API_DOCUMENTATION.md  MAINTAINERS.md  README.md  (+2 more)
(+61 files in other folders)
